added some comment

--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
   </div>  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="app.js"></script>
+  <!--some comment-->
 </body>
 </html>
